@@ -11,6 +11,7 @@ Merged from 3.11:
 Merged from 3.0:
  * Fix CQLSH online help topic link (CASSANDRA-17534)
  * Remove unused suppressions (CASSANDRA-18724)
+ * Expose bootstrap failure state via JMX (CASSANDRA-18749)
 
 
 5.0
